# mtg-engine

./: .gitignore  .pre-commit-config.yaml  README.md  TODO.md  pylintrc  setup.cfg
.github/workflows/: codeql-analysis.yml  pylint.yml  pytest.yml
cache/: bulk_metadata.json
src/mtg_cards/: README.md  __init__.py  booster.py  booster_probs.py  card.py  cards.py  neo_booster.py  render.py  scryfall.py  sets.py  util.py
src/mtg_decks/: __init__.py  deck.py  decks.py  sealed.py
src/mtg_draft/: draft.py
src/mtg_engine/: README.md  choice.py  engine.py  game.py  message.py  player.py  view.py  zone.py
src/mtg_engine/decision_engine/: README.md  engine.py  example_blackjack.py  game.py  message.py  player.py
src/mtg_engine/mtg_cards/: __init__.py  booster.py  booster_probs.py  cards.py  neo_booster.py  scryfall.py  sets.py  util.py
src/mtg_engine/mtg_decks/: build.py  decks.py  old_decks.py  sealed.py
src/mtg_engine/mtg_draft/: draft.py  old_draft.py
src/mtg_engine/mtg_game/: README.md  choice.py  engine.py  game.py  objects.py  player.py  view.py  zones.py
tests/cards/: test_booster.py  test_sets.py
tests/decision/: test_blackjack.py
tests/decks/: test_decks.py  test_sealed.py
tests/draft/: test_draft.py
tests/mtg_cards/: test_booster.py  test_scryfall.py  test_sets.py
tests/mtg_decks/: test_decks.py  test_sealed.py
tests/mtg_draft/: test_draft.py
