[metadata]
name = mtg-engine-aray
version = 0.0.1
author = Aray
author_email = a@machinaut.com
description = Python MtG Engine
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/machinaut/mtg-engine
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.10
install_requires =
    wheel
    numpy
    matplotlib
    jupyter
    notebook
    ipykernel
    pandas
    scipy
    torch
    requests
    black
    isort
    imgcat
    pytest
    pillow

[options.packages.find]
where = src
